changd fairy symbol for login hover, changed color palette, added toasts, added confirmation popup for delete birthday

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,6 +1,6 @@
-$primary: #03b5aa;
-$secondary: #037971;
+$primary: #7F6D88;
+$secondary: #68847F;
 
-$bg-bright: #00bfb3;
-$bg-dark: #023436;
-$bg-alt: #ECFEFE;
+$bg-bright: #94c0bb;
+$bg-dark: rgba(31, 29, 29, 0.86);
+$bg-alt: #ebf5f2;
